--- a/tarea3dwescristinamellado/src/main/resources/application.properties
+++ b/tarea3dwescristinamellado/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=tarea3dwescristinamellado
-spring.datasource.url=jdbc:mysql://localhost:3306/bdtarea3dwes?useSSL=false 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/bdtarea3dwes_cristimellado?useSSL=false 
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
